# moltpulse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  Untitled  moltos.py  moltpulse.py  pyproject.toml
.github/scripts/: sync-docs.js
.github/workflows/: ci.yml  release.yml  sync-docs.yml
.specstory/history/: 2026-02-01_19-24-55Z-i-want-to-plan.md
collectors/: __init__.py  financial.py  news.py  rss.py  social_x.py  web_scraper.py
core/: __init__.py  collector_base.py  delivery.py  domain_loader.py  orchestrator.py  profile_loader.py  report_base.py
core/cli/: __init__.py  config_commands.py  domain_commands.py  profile_commands.py
core/lib/: __init__.py  cache.py  dates.py  env.py  http.py  normalize.py
cron/: daily-brief.json  fundraising-outlook.json  weekly-digest.json
docs/: README.md  architecture.md  domains.md  getting-started.md  monitoring.md  profiles.md
domains/advertising/: domain.yaml
domains/advertising/collectors/: awards.py  pe_activity.py
domains/advertising/profiles/: ricki.yaml
domains/advertising/reports/: __init__.py  daily_brief.py  fundraising.py  weekly_digest.py
product_docs/distribution/: README.md  contributor-guide.md  faq.md  full-pitch.md  quick-pitch.md
product_docs/plans/: 2026-02-01-moltpulse-network-publishing-platform.md  2026-02-02-monetization-design.md
product_docs/plans/initial_spec/: 2026-02-01-general_requirements.md  2026-02-01-specific_interests.md
product_docs/research/: 2026-02-01-competitive-landscape-analysis.md
src/moltpulse/: __init__.py  __main__.py  cli.py
src/moltpulse/collectors/: financial.py  news.py  rss.py  social_x.py  web_scraper.py
src/moltpulse/core/: __init__.py  collector_base.py  delivery.py  domain_loader.py  llm_enhance.py  orchestrator.py  profile_loader.py  report_base.py  trace.py  ui.py
src/moltpulse/core/cli/: __init__.py  config_commands.py  cron_commands.py  domain_commands.py  profile_commands.py
src/moltpulse/core/lib/: cache.py  dedupe.py  env.py  http.py  key_validation.py  schema.py  score.py
src/moltpulse/cron/: daily-brief.json  fundraising-outlook.json  weekly-digest.json
src/moltpulse/domains/advertising/: domain.yaml
src/moltpulse/domains/advertising/collectors/: __init__.py  awards.py  pe_activity.py
src/moltpulse/domains/advertising/profiles/: default.yaml  ricki.yaml
src/moltpulse/domains/advertising/reports/: __init__.py  daily_brief.py  fundraising.py  weekly_digest.py
tests/: __init__.py  test_collector_base.py  test_dates.py  test_dedupe.py  test_domain_loader.py  test_llm_enhance.py  test_profile_loader.py  test_schema.py  test_scoring.py  test_trace.py
