[project]
name = "moltpulse"
dynamic = ["version"]
description = "Domain-agnostic industry intelligence framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
scraping = [
    "playwright>=1.40.0",
]
llm = [
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[project.scripts]
moltpulse = "moltpulse.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/moltpulse/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/moltpulse"]

[tool.hatch.build.targets.sdist]
include = ["src/moltpulse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]

